# RASCAL

./: .gitignore  LICENSE.txt  README.md  cli.py  config.yaml  example_config.yaml  pyproject.toml  rascal_manual.md  requirements.in  requirements.txt  setup.cfg  setup.py  streamlit_app.py
archived_workflows/: README.md
archived_workflows/01_asr_vs_clinical_measures_2025/: README_procedural.txt  README_technical.md  workflow_manifest.yaml
archived_workflows/01_powers_automation_validation_2025/: README.md
archived_workflows/02_powers_analysis_and_reliability_evaluation_2026/: README_procedural.txt
archived_workflows/02_powers_automation_validation_2025/: README.md  workflow_manifest.yaml
archived_workflows/03_powers_analysis_and_reliability_evaluation_2026/: README_procedural.txt  README_technical.md  workflow_manifest.yaml
data/input/: tiers.txt
input/: tiers.txt
manual/: 00_outline.md  01_introduction.md  02_installation.md  03_configuration.md  99_references.md  manual_header.yaml  manual_pdf.yaml  rascal_manual.md
reqs/: asr.in  asr.txt  base.txt  dev.txt  full.in  full.txt  nlp.in  nlp.txt
scripts/: run_tests.ps1
src/rascal/: __init__.py  (+15 more)
tests/: test_asr_utils.py  test_cli.py  test_config.py  test_diaad_config.py  test_diaad_invocation.py  test_init.py  test_main.py  test_manifests.py  test_package_data.py  test_planner.py  test_preflight.py  test_profiles.py  test_requirements.py  test_runner.py  test_stages.py  test_status_next.py  test_workflows.py
venv_rascal/: pyvenv.cfg
webapp/: config_builder.py  manual_viewer.py  streamlit_app.py
(+131 files in other folders)
