[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rascal-speech"
version = "1.0.8"
description = "Laboratory-specific discourse analysis tools in the DIAAD lineage"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Nick McCloskey" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "diaad>=0.3.1,<0.4.0",
    "num2words>=0.5.14",
    "PyYAML>=6.0.2",
    "openpyxl>=3.1.5",
]

[project.scripts]
rascal = "rascal.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
asr = ["pydub>=0.25.1"]
nlp = ["diaad[nlp]>=0.3.1,<0.4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rascal = [
    "data/profiles/*.yaml",
    "data/stages/*.yaml",
]
